Image editor no longer reflecting changes of the node tree #95809

Closed
opened 2022-02-16 00:37:10 +01:00 by michael campbell · 10 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-12 01:56, hash: 517afcc858
Caused by 507a4deef1

Short description of error
changing which output is connected to composite node in the compositor no longer updates the image editor

Steps to Reproduce

  • Enable some passes, enable use nodes in the compositor
  • Connect the render layer output to the Composite node.
  • Open an image editor open alongside it (image editor should be set to render result).
  • Hit render (default scene will suffice)
  • connect a different render layer output to composite node. Nothing happens. Now zoom in on the image editor, the image editor will now update.

This happens for any changes made in the node editor. For example adding an RGB to BW node between the render layer and the composite/view node will have no effect until zooming either.

This may also be causing saved images (when doing a ctrl f12 animation) to not reflect the effects of the compositor.

Test File:
#95809.blend

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-12 01:56, hash: `517afcc858` Caused by 507a4deef1 **Short description of error** changing which output is connected to composite node in the compositor no longer updates the image editor **Steps to Reproduce** - Enable some passes, enable use nodes in the compositor - Connect the render layer output to the Composite node. - Open an image editor open alongside it (image editor should be set to render result). - Hit render (default scene will suffice) - connect a different render layer output to composite node. Nothing happens. Now zoom in on the image editor, the image editor will now update. This happens for any changes made in the node editor. For example adding an RGB to BW node between the render layer and the composite/view node will have no effect until zooming either. This may also be causing saved images (when doing a ctrl f12 animation) to not reflect the effects of the compositor. Test File: [#95809.blend](https://archive.blender.org/developer/F12869477/T95809.blend)

Added subscriber: @3di

Added subscriber: @3di
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Hi, thanks for the report. Compositor refresh issue is appear to be fixed already. Same as: #95699 (Compositing Tab - Blender does not make changes in real time)
But I can confirm the case of image editor which has been introduced with 507a4deef1

cc @Jeroen-Bakker

Hi, thanks for the report. Compositor refresh issue is appear to be fixed already. Same as: #95699 (Compositing Tab - Blender does not make changes in real time) But I can confirm the case of image editor which has been introduced with 507a4deef1 cc @Jeroen-Bakker
Pratik Borhade changed title from compositor backdrop and image editor (set to render result or viewer node) are no longer reflecting changes in the node tree. to Image editor no longer reflecting changes of the node tree 2022-02-16 03:57:08 +01:00

@PratikPB2123 ah I see, for some reason when I downloaded today's daily it gave me the build from the 12th. Will try again 👍

@PratikPB2123 ah I see, for some reason when I downloaded today's daily it gave me the build from the 12th. Will try again 👍
Jeroen Bakker self-assigned this 2022-02-16 11:09:27 +01:00
Member

Yes. :-(

Yes. :-(

This issue was referenced by 400e57b64a

This issue was referenced by 400e57b64acc5fee1859a815d96db91e4e89aaa0
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This issue was referenced by fe26d18889

This issue was referenced by fe26d188891f95d199e2559929204fddacea2ba8
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95809
No description provided.