Fix T95809: Compositor Node not directly updated in image editor.

Image wasn't tagged to be dirty.